--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ plugins {
 
 android {
     namespace 'com.rique.walkseller'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.rique.walkseller"
         minSdk 28
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -82,4 +82,7 @@ dependencies {
     // Hilt
     implementation "com.google.dagger:hilt-android:2.42"
     kapt "com.google.dagger:hilt-compiler:2.42"
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
