--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,6 @@ dependencies {
 
     //Gson
     implementation 'com.google.code.gson:gson:2.8.9'
+
+    implementation "androidx.compose.material3:material3:1.1.1"
 }
