Navigation in development

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.compose.ui:ui-graphics-android:1.5.0'
+    implementation "androidx.compose.material3:material3:1.1.1"
+    implementation "androidx.navigation:navigation-compose:2.7.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -81,11 +83,10 @@ dependencies {
     implementation 'com.google.maps.android:maps-utils-ktx:3.2.1'
 
     // Hilt
-    implementation "com.google.dagger:hilt-android:2.42"
+    implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.42"
+    implementation "androidx.hilt:hilt-navigation-compose:1.1.0-alpha01"
 
     //Gson
     implementation 'com.google.code.gson:gson:2.8.9'
-
-    implementation "androidx.compose.material3:material3:1.1.1"
 }
