--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,5 +32,7 @@
             </intent-filter>
         </activity>
     </application>
-
+    <queries>
+        <package android:name="com.whatsapp" />
+    </queries>
 </manifest>
